--- a/.config/i3/config
+++ b/.config/i3/config
@@ -197,9 +197,11 @@ bindsym XF86AudioPrev exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer
 bindsym XF86AudioNext exec "dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Next"
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | sed -e 's/^\([0-9][0-9]*\)[^0-9].*/\1/' | head -n 1) +1% #increase sound volume
+bindsym Ctrl+XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | sed -e 's/^\([0-9][0-9]*\)[^0-9].*/\1/' | head -n 1) +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | sed -e 's/^\([0-9][0-9]*\)[^0-9].*/\1/' | head -n 1) -1% #decrease sound volume
+bindsym Ctrl+XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pactl list short sinks | sed -e 's/^\([0-9][0-9]*\)[^0-9].*/\1/' | head -n 1) -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pactl list short sinks | sed -e 's/^\([0-9][0-9]*\)[^0-9].*/\1/' | head -n 1) toggle # mute sound
 
 # Print screen of selection to clipboard
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
