--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,6 +3,9 @@
   "tslint.enable": true,
   "tslint.autoFixOnSave": true,
 
+  // Typescript
+  "typescript.preferences.importModuleSpecifier": "relative",
+
   // Run prettier (and others)
   "coc.preferences.formatOnSaveFiletypes": [
     "css",
