Remove warnings for experimental decorators

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -5,6 +5,7 @@
 
   // Typescript
   "typescript.preferences.importModuleSpecifier": "relative",
+  "tsserver.implicitProjectConfig.experimentalDecorators": true,
 
   // Run prettier (and others)
   "coc.preferences.formatOnSaveFiletypes": [
