Coc config for angular and adjust the keymapping

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,4 +1,7 @@
 {
+  // CoC Angular
+  "angular.suggest.includeAutomaticOptionalChainCompletions": true,
+
   // Tslint on save
   "tslint.enable": true,
   "tslint.autoFixOnSave": true,
