Small updates to config and new plugins

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   // CoC Angular
+  "angular.suggest.includeCompletionsWithSnippetText": true,
   "angular.suggest.includeAutomaticOptionalChainCompletions": true,
 
   // Tslint on save
