--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -9,6 +9,8 @@
     "coc-snippets": ">=3.1.4",
     "coc-tslint": ">=1.0.17",
     "coc-tsserver": ">=2.0.2",
-    "coc-vetur": ">=1.2.5"
-  }
+    "coc-vetur": ">=1.2.5",
+    "coc-eslint": ">=1.6.0"
+  },
+  "lastUpdate": 1706439442137
 }
