--- a/.config/i3/config
+++ b/.config/i3/config
@@ -159,7 +159,12 @@ bindsym $mod+r mode "resize"
 bindsym $mod+p move workspace to output right
 
 # Dual monitor config
-exec xrandr --output HDMI-1-1 --primary --right-of eDP-1-1
+# exec xrandr --output HDMI-1-1 --primary --right-of eDP-1-1
+exec xrandr --output HDMI-1 --primary --right-of eDP-1
+exec xrandr --output HDMI-1 --mode "2560x1440"
+
+# Do not turn off display after timeout
+exec xset -dpms s off
 
 # py3status
 bar {
@@ -206,6 +211,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pactl list shor
 # Print screen of selection to clipboard
 bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection clipboard -t image/png
 bindsym Print exec flameshot gui
+bindsym Shift+Print exec peek
 
 # Run custom scripts on startup
 exec_always --no-startup-id /home/bud/.config/i3/i3_autostart.sh
