--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,13 +3,19 @@
   "angular.suggest.includeCompletionsWithSnippetText": true,
   "angular.suggest.includeAutomaticOptionalChainCompletions": true,
 
-  // Tslint on save
-  "tslint.enable": true,
-  "tslint.autoFixOnSave": true,
-
   // Typescript
   "typescript.preferences.importModuleSpecifier": "relative",
   "tsserver.implicitProjectConfig.experimentalDecorators": true,
+
+  // ESLint
+  "eslint.autoFixOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact",
+    "html"
+  ],
 
   // Run prettier (and others)
   "coc.preferences.formatOnSaveFiletypes": [
@@ -25,5 +31,24 @@
     "graphql",
     "handlebars",
     "html"
-  ]
+  ],
+
+  // coc-snippets
+  "snippets.userSnippetsDirectory": "~/.config/nvim/snippets",
+
+  // Angular language server
+  "languageserver": {
+    "angular": {
+      "command": "ngserver",
+      "args": [
+        "--stdio",
+        "--tsProbeLocations",
+        "/home/bud/.nvm/versions/node/v23.6.0/lib/node_modules/typescript/lib",
+        "--ngProbeLocations",
+        "/home/bud/.nvm/versions/node/v23.6.0/lib/node_modules/@angular/language-server/bin"
+      ],
+      "filetypes": ["ts", "typescript", "html"],
+      "trace.server.verbosity": "verbose"
+    }
+  }
 }
