--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,7 @@ font pango:monospace 10
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec gnome-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -213,7 +213,7 @@ bindsym Ctrl+Shift+Print exec --no-startup-id maim --select | xclip -selection c
 bindsym Print exec flameshot gui
 bindsym Shift+Print exec peek
 
-bindsym $mod+Shift+s exec --no-startup-id /usr/bin/clicker.sh
+bindsym --whole-window Shift+button2 exec --no-startup-id /usr/bin/clicker.sh
 
 # Run custom scripts on startup
 exec_always --no-startup-id /home/bud/.config/i3/i3_autostart.sh
